reorganize the `codebase`. then delete data and re-run from scratch

--- a/scripts/local_return_period.ipynb
+++ b/scripts/local_return_period.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "breeding-diving",
+   "id": "convinced-constitution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "amazing-republic",
+   "id": "ignored-excitement",
    "metadata": {},
    "source": [
     "# Local Return Periods\n",
@@ -39,12 +39,10 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "noticed-supervisor",
+   "id": "rising-vanilla",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
     "import cartopy.crs as ccrs\n",
     "from cartopy.feature import STATES, COASTLINE\n",
     "import geopandas as gp\n",
@@ -57,14 +55,14 @@
     "import xarray as xr\n",
     "\n",
     "from codebase.calc import return_period as calc_return_period\n",
-    "from codebase.data import get_ghcn_data, PARDIR\n",
+    "from codebase.data import get_ghcn_data, datadir\n",
     "from codebase.read_ghcn import read_station_metadata\n",
     "from codebase.fig import smart_save, add_panel_text"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "typical-brook",
+   "id": "rough-japan",
    "metadata": {},
    "source": [
     "## GHCND\n",
@@ -74,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nonprofit-weekend",
+   "id": "premium-package",
    "metadata": {},
    "source": [
     "First, load the data set in which we computed the empirical exceedance probability for annual-maximum cold outbreaks of different lengths.\n",
@@ -84,12 +82,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cardiac-hungarian",
+   "id": "sweet-statistics",
    "metadata": {},
    "outputs": [],
    "source": [
     "return_period = pd.read_csv(\n",
-    "    os.path.join(PARDIR, \"data\", \"processed\", \"ghcnd\", \"return_periods.csv\"),\n",
+    "    datadir(\"processed\", \"ghcnd\", \"return_periods.csv\"),\n",
     "    index_col=\"stnid\",\n",
     "    false_values=\"False\",\n",
     "    true_values=\"True\",\n",
@@ -98,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "gentle-performer",
+   "id": "chubby-cruise",
    "metadata": {},
    "source": [
     "Now we join this with station metadata to get lat and lon so we can plot"
@@ -107,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "lightweight-census",
+   "id": "familiar-congo",
    "metadata": {},
    "outputs": [
     {
@@ -265,16 +263,14 @@
     }
    ],
    "source": [
-    "metadata = read_station_metadata(\n",
-    "    os.path.join(PARDIR, \"data\", \"raw\", \"ghcnd_stations.txt\")\n",
-    ")\n",
+    "metadata = read_station_metadata(datadir(\"raw\", \"ghcnd_stations.txt\"))\n",
     "mrg = return_period.join(metadata[[\"LATITUDE\", \"LONGITUDE\", \"NAME\"]], how=\"left\")\n",
     "mrg.head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "waiting-meeting",
+   "id": "specified-nowhere",
    "metadata": {},
    "source": [
     "Here are all the stations we are using:"
@@ -283,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "short-driver",
+   "id": "pressing-repair",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accurate-simulation",
+   "id": "limiting-deputy",
    "metadata": {},
    "source": [
     "Now we can plot the data"
@@ -326,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "turkish-drinking",
+   "id": "square-dealing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "inappropriate-simulation",
+   "id": "afraid-impact",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "departmental-horizontal",
+   "id": "complimentary-chuck",
    "metadata": {},
    "source": [
     "Note that here a circle means it was a record breaking event.\n",
@@ -415,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "smaller-classic",
+   "id": "parallel-while",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fleet-orlando",
+   "id": "assumed-secretary",
    "metadata": {},
    "source": [
     "Less than a 1 in 25 year storm at Hobby!\n",
@@ -519,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "another-basics",
+   "id": "lovely-anaheim",
    "metadata": {},
    "source": [
     "## ERA5\n",
@@ -530,12 +526,12 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "legislative-battlefield",
+   "id": "caroline-kuwait",
    "metadata": {},
    "outputs": [],
    "source": [
     "era5_rt = xr.open_dataarray(\n",
-    "    os.path.join(PARDIR, \"data\", \"processed\", \"era5\", \"tx\", \"return_period.nc\")\n",
+    "    datadir(\"processed\", \"era5\", \"tx\", \"return_period.nc\")\n",
     ").rename(\n",
     "    {\"longitude\": \"lon\", \"latitude\": \"lat\"}\n",
     ")  # rename to work w/ regionmask"
@@ -543,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "saved-payment",
+   "id": "selected-decade",
    "metadata": {},
    "source": [
     "We want to plot only over land"
@@ -552,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "opening-floor",
+   "id": "adapted-groove",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "promising-moses",
+   "id": "external-packing",
    "metadata": {},
    "source": [
     "These estimates have already been calculated so we can just plot them.\n",
@@ -574,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "scheduled-boxing",
+   "id": "pressed-companion",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +834,7 @@
    ],
    "source": [
     "generators = pd.read_excel(\n",
-    "    os.path.join(PARDIR, \"data\", \"raw\", \"eia\", \"november_generator2020.xlsx\"),\n",
+    "    datadir(\"raw\", \"eia\", \"november_generator2020.xlsx\"),\n",
     "    skiprows=2,\n",
     "    sheet_name=\"Operating\",\n",
     "    index_col=\"Entity ID\",\n",
@@ -848,7 +844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reduced-taste",
+   "id": "changed-corporation",
    "metadata": {},
    "source": [
     "Some recoding necessary"
@@ -857,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "following-volleyball",
+   "id": "absolute-allen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -907,7 +903,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "comfortable-bicycle",
+   "id": "conceptual-ukraine",
    "metadata": {},
    "source": [
     "Now also population data"
@@ -916,15 +912,13 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "charming-generator",
+   "id": "trying-brooks",
    "metadata": {},
    "outputs": [],
    "source": [
     "pop = (\n",
     "    xr.open_dataarray(\n",
-    "        os.path.join(\n",
-    "            PARDIR,\n",
-    "            \"data\",\n",
+    "        datadir(\n",
     "            \"raw\",\n",
     "            \"gpwv4\",\n",
     "            \"gpw_v4_population_density_rev11_2pt5_min.nc\",\n",
@@ -938,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "oriental-preliminary",
+   "id": "polish-contamination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "invisible-omaha",
+   "id": "closing-attraction",
    "metadata": {},
    "source": [
     "And finally the outline of the Texas interconnect"
@@ -959,19 +953,19 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "certified-powell",
+   "id": "dedicated-stamp",
    "metadata": {},
    "outputs": [],
    "source": [
     "ercot = gp.read_file(\n",
-    "    os.path.join(PARDIR, \"data\", \"raw\", \"eia\", \"regions_NERC\", \"NercRegions_201907.shp\")\n",
+    "    datadir(\"raw\", \"eia\", \"regions_NERC\", \"NercRegions_201907.shp\")\n",
     ").loc[lambda df: df[\"NERC\"] == \"TRE\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "alpine-rover",
+   "execution_count": 16,
+   "id": "lovely-sunrise",
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1099,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thirty-fetish",
+   "id": "christian-pearl",
    "metadata": {},
    "source": [
     "We can see that our findings are generally consistent across these two very different datasets, which adds credibility."
