first stab at addressing reviewer comments

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -443,6 +443,23 @@
   language = {en-US}
 }
 
+@article{romanowsky_stratosphere:2019,
+  title = {The Role of Stratospheric Ozone for {{Arctic}}-Midlatitude Linkages},
+  shorttitle = {Stratosphere},
+  author = {Romanowsky, Erik and Handorf, D{\"o}rthe and Jaiser, Ralf and Wohltmann, Ingo and Dorn, Wolfgang and Ukita, Jinro and Cohen, Judah and Dethloff, Klaus and Rex, Markus},
+  year = {2019},
+  month = may,
+  volume = {9},
+  pages = {7962},
+  publisher = {{Nature Publishing Group}},
+  issn = {2045-2322},
+  doi = {10.1038/s41598-019-43823-1},
+  copyright = {2019 The Author(s)},
+  journal = {Scientific Reports},
+  language = {en},
+  number = {1}
+}
+
 @article{Screen:2013ho,
   title = {Exploring Links between {{Arctic Amplification}} and Mid-Latitude Weather},
   author = {Screen, James A and Simmonds, Ian},
