--- a/doc/revision_01.tex
+++ b/doc/revision_01.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt]{iopart}
 %DIF LATEXDIFF DIFFERENCE FILE
 %DIF DEL submission_01.tex   Fri Apr 23 09:06:12 2021
-%DIF ADD submission_02.tex   Sun May  2 18:33:50 2021
+%DIF ADD submission_02.tex   Mon May  3 16:43:48 2021
 
 \usepackage{graphicx}
 \graphicspath{{../fig/}}
@@ -104,13 +104,18 @@
 \begin{abstract}
   Winter storm Uri brought severe cold to the southern United States in February 2021, causing a cascading failure of interdependent systems in Texas where infrastructure was not adequately prepared for such cold.
   In particular, the failure of interconnected energy systems reduced electricity supply just as heating demands spiked, leaving millions of Texans without heat or electricity, many for several days.
-  This motivates the question: \DIFdelbegin \DIFdel{was the cold }\DIFdelend \DIFaddbegin \DIFadd{were the temperatures }\DIFaddend that contributed to this infrastructure failure \DIFdelbegin \DIFdel{a ``black swan'' that could not have been anticipated}\DIFdelend \DIFaddbegin \DIFadd{beyond what was known to be possible}\DIFaddend , or did historical storms \DIFdelbegin \DIFdel{provide }\DIFdelend \DIFaddbegin \DIFadd{offer }\DIFaddend a precedent?
-  We compute the population weighted temperature excursion below \SI{68}{\degree F} as a proxy for heating demand and use this metric to answer the question ``what would the aggregate demand for heating have been had historic cold snaps occurred today?''.
-  We find that local temperatures and the inferred demand for heating across the \DIFdelbegin \DIFdel{Texas Interconnect }\DIFdelend \DIFaddbegin \DIFadd{region served by the Texas Interconnection }\DIFaddend during a storm in December 1989 were more \DIFdelbegin \DIFdel{intense }\DIFdelend \DIFaddbegin \DIFadd{severe }\DIFaddend than those recorded during February 2021, and that several other storms in the modern era were comparable.
+  This motivates the question: \DIFdelbegin \DIFdel{was the cold that contributed to this infrastructure failure a ``black swan'' that could not have been anticipated, or did historical storms provide a precedent}\DIFdelend \DIFaddbegin \DIFadd{did historical storms suggest that such temperatures could be anticipated, and if so with what frequency}\DIFaddend ?
+  We compute the \DIFdelbegin \DIFdel{population weighted temperature excursion below \mbox{%DIFAUXCMD
+\SI{68}{\degree F} }\hspace{0pt}%DIFAUXCMD
+as a }\DIFdelend \DIFaddbegin \DIFadd{a temperature-based }\DIFaddend proxy for heating demand and use this metric to answer the question ``what would the aggregate demand for heating have been had historic cold snaps occurred \DIFdelbegin \DIFdel{today}\DIFdelend \DIFaddbegin \DIFadd{with today's population}\DIFaddend ?''.
+  We find that local temperatures and the inferred demand for heating across the \DIFdelbegin \DIFdel{Texas Interconnect }\DIFdelend \DIFaddbegin \DIFadd{region served by the Texas Interconnection }\DIFaddend during a storm in December 1989 were more \DIFdelbegin \DIFdel{intense }\DIFdelend \DIFaddbegin \DIFadd{severe }\DIFaddend than those recorded during February 2021, and that \DIFdelbegin \DIFdel{several other storms in the modern era were comparable}\DIFdelend \DIFaddbegin \DIFadd{cold snaps in 1951 and 1983 were nearly as severe}\DIFaddend .
   Given anticipated population growth, future storms may lead to even greater infrastructure failures if adaptive investments are not made.
-  Further, electricity system managers should anticipate that upward trends in electrification of heating may cause peak annual loads on the Texas \DIFdelbegin \DIFdel{Interconnect }\DIFdelend \DIFaddbegin \DIFadd{Interconnection }\DIFaddend to occur during winter storms.
+  Further, electricity system managers should anticipate that \DIFdelbegin \DIFdel{upward }\DIFdelend trends in electrification of heating may cause peak annual loads on the Texas \DIFdelbegin \DIFdel{Interconnect }\DIFdelend \DIFaddbegin \DIFadd{Interconnection }\DIFaddend to occur during winter storms \DIFdelbegin \DIFdel{.
+}%DIFDELCMD < 
 
-\end{abstract}
+%DIFDELCMD < %%%
+\DIFdelend \DIFaddbegin \DIFadd{in some years.
+}\DIFaddend \end{abstract}
 \noindent{\it Keywords: Energy, Electricity, Texas, Natural Hazards, Climate Resilience}
 
 \submitto{\ERL}
@@ -118,35 +123,90 @@
 
 \section{Introduction}
 
-Between February 14th and 17th, 2021, a northern air mass blanketed much of the continental United States, causing anomalously low surface temperatures across the Great Plains.
-While polar air excursions are not unusual, they do not typically reach as far south as the Mexican border.
-The state of Texas was particularly hard hit, with coincident and cascading failures of natural gas production, power generation, transportation, and water systems leaving millions of Texans without electricity, heat, and water, many for several days.
+Between February 14th and 17th, 2021, a  northern air mass blanketed much of the continental United States, causing anomalously low surface temperatures across the Great Plains.
+\DIFdelbegin \DIFdel{While polar air excursions are not unusual, they do not typically reach as far south as the Mexican border.
+}\DIFdelend The state of Texas was particularly hard hit, with coincident and cascading failures of natural gas production, power generation, transportation, and water systems leaving millions of Texans without electricity, heat, and water, many for several days \DIFdelbegin \DIFdel{.
 The intensity and widespread nature of this weather event underscore a high vulnerability to cold temperatures in places that did not experience a comparable event in preceding decades.
-Even as energy demand for winter heating in Texas has grown dramatically with population and economic development, the system’s vulnerability to cold jeopardized lives and property and brought the Texas electricity grid within minutes of collapse.
+Even as energy demand for winter heating in Texas has grown dramatically with population and economic development, the system’s vulnerability to cold jeopardized lives and property and }\DIFdelend \DIFaddbegin \DIFadd{\mbox{%DIFAUXCMD
+\cite{ceser_winterupdate:2021,clack_uri:2021,smead_eyesoftx:2021}}\hspace{0pt}%DIFAUXCMD
+.
+These failures disproportionately affected vulnerable populations \mbox{%DIFAUXCMD
+\cite{dobbins_blackoutdisparity:2021}}\hspace{0pt}%DIFAUXCMD
+, left at least 111 Texans dead \mbox{%DIFAUXCMD
+\cite{mulcahy_urideath:2021}}\hspace{0pt}%DIFAUXCMD
+, and }\DIFaddend brought the Texas electricity grid within minutes of collapse \DIFaddbegin \DIFadd{\mbox{%DIFAUXCMD
+\cite{magness_review:2021}}\hspace{0pt}%DIFAUXCMD
+}\DIFaddend .
 
-Since production and distribution of natural gas and electricity is possible under conditions far colder than any Texas experienced in February 2021, energy system failures reflect inadequate preparedness for cold.
-If \DIFdelbegin \DIFdel{this were an unprecedented or very rare event }\DIFdelend \DIFaddbegin \DIFadd{these temperatures were unprecedented in the region covered by the Texas Interconnection }\DIFaddend then it is possible that the impacts resulted from an event outside the design envelope.
-On the other hand, if similar events were in the record then one would expect a higher level of preparation.
+Since production and distribution of \DIFdelbegin \DIFdel{natural gas and }\DIFdelend electricity is possible under conditions far colder than any Texas experienced in February 2021, energy system failures reflect inadequate preparedness for cold.
+\DIFdelbegin \DIFdel{If this were an unprecedentedor very rare event then it is possible that the impacts resulted from  an event outside the design envelope}\DIFdelend \DIFaddbegin \DIFadd{These failures occurred both because electricity demand exceeded projections, and because electricity supply failed to meet them.
+On the demand side, the Electric Reliability Council of Texas (ERCOT), which operates the Texas Interconnection bulk electric power system (hence ``Texas Interconnection''), estimated that the peak demand would have been \mbox{%DIFAUXCMD
+\SI{76819}{\mega\watt} }\hspace{0pt}%DIFAUXCMD
+without load shedding \mbox{%DIFAUXCMD
+\cite{magness_review:2021}}\hspace{0pt}%DIFAUXCMD
+.
+This surpassed ERCOT's ``extreme winter forecast'' of \mbox{%DIFAUXCMD
+\SI{67208}{\mega\watt} }\hspace{0pt}%DIFAUXCMD
+in its seasonal assessment of resource adequacy \mbox{%DIFAUXCMD
+\cite{ercotpublic_sarawinter:2020}}\hspace{0pt}%DIFAUXCMD
+.
+On the supply side, ERCOT experienced over \mbox{%DIFAUXCMD
+\SI{30000}{\mega\watt} }\hspace{0pt}%DIFAUXCMD
+of lost output over two days due to outages and derates caused by cold temperatures \mbox{%DIFAUXCMD
+\cite{ercotpublic_outagesv2:2021}}\hspace{0pt}%DIFAUXCMD
+.
+A large fraction of this supply shortfall, which exceeded ERCOT's worst-case scenario for forced outages, came from diverse failure modes in the natural gas supply chain \mbox{%DIFAUXCMD
+\cite{ercotpublic_outagesv2:2021,smead_eyesoftx:2021,ceser_winterupdate:2021}}\hspace{0pt}%DIFAUXCMD
+.
+}
+
+\DIFadd{If temperatures experienced in the region served by the Texas Interconnection were unprecedented, then engineering designs derived from  historical data might exhibit substantial vulnerability}\DIFaddend .
+On the other hand, if \DIFdelbegin \DIFdel{similar events were in the record then one would expect a higher level of preparation}\DIFdelend \DIFaddbegin \DIFadd{the region had experienced similar events previously then it would suggest that these vulnerabilities could have been anticipated}\DIFaddend .
 It is therefore important to assess whether \DIFdelbegin \DIFdel{the February 2021 cold snap could have been anticipated.
 }\DIFdelend \DIFaddbegin \DIFadd{historical data offered a precedent for the temperatures observed during February 2021.
-}\DIFaddend To answer this question, we first compute the population weighted \DIFdelbegin \DIFdel{temperature excursion below \mbox{%DIFAUXCMD
+}
+
+\DIFaddend To answer this question, we first compute the population weighted \DIFdelbegin \DIFdel{temperature excursion below \mbox{%DIFAUXCMD
 \SI{68}{\degree F} }\hspace{0pt}%DIFAUXCMD
 }\DIFdelend \DIFaddbegin \DIFadd{difference between observed temperatures and a standard indoor temperature of \mbox{%DIFAUXCMD
 \SI{65}{\degree F} }\hspace{0pt}%DIFAUXCMD
-}\DIFaddend as a proxy for the unknown heating demand, and use this metric to explore \DIFdelbegin \DIFdel{how rare this event was }\DIFdelend \DIFaddbegin \DIFadd{the frequency with which this event could have been expected to occur }\DIFaddend using historical data.
-Next, we conduct a spatially distributed analysis to assess how unexpected the cold experienced by local roads, water mains, gas pipelines, energy generation facilities, and critical infrastructure installations was across Texas.
-We conclude by discussing the implications of these findings for long-term electricity systems planning given anticipated population growth and electrification.
+}\DIFaddend as a proxy for the unknown heating demand, \DIFdelbegin \DIFdel{and use this metric to explore how rare this event was using historical data.
+Next, we conduct }\DIFdelend \DIFaddbegin \DIFadd{then use standard statistical procedures to assess the probability with which the temperatures observed during February 2021 might have been expected to occur }\emph{\DIFadd{a priori}}\DIFadd{.
+We then supplement this with }\DIFaddend a spatially distributed analysis \DIFdelbegin \DIFdel{to assess }\DIFdelend \DIFaddbegin \DIFadd{of }\DIFaddend how unexpected the cold experienced by local roads, water mains, gas pipelines, energy generation facilities, and critical infrastructure installations was across Texas.
+We conclude by discussing the implications of these findings for long-term electricity systems planning given anticipated \DIFdelbegin \DIFdel{population growth }\DIFdelend \DIFaddbegin \DIFadd{growth of population }\DIFaddend and electrification.
 
 \subsection{Previous Cold Snaps in Texas}
 
-It is well documented that Texas has previously experienced severe cold, most notably in 1899, 1951, 1983, 1989, and 2011.
-The specific spatiotemporal structure of a cold event, and its correspondence with population centers, modulates the grid-wide demand for heating (\cref{sec:inferred-demand}).
+
+\DIFdelbegin \DIFdel{It is well documented that Texas has previously experienced severe cold , most }\DIFdelend \DIFaddbegin \DIFadd{Texas state climatologist John Nielsen-Gammon wrote in 2011 that ``winter weather is a danger to TX in part because it is so rare,'' \mbox{%DIFAUXCMD
+\cite{nielsen-gammon_txacc:2011}}\hspace{0pt}%DIFAUXCMD
+.
+Previous cold snaps in Texas, }\DIFaddend notably in 1899, 1951, 1983, 1989, and \DIFdelbegin \DIFdel{2011.
+}\DIFdelend \DIFaddbegin \DIFadd{2011 (see \mbox{%DIFAUXCMD
+\cref{fig:historic_era5,fig:historic_bk}}\hspace{0pt}%DIFAUXCMD
+), have affected both human and ecological systems.
+For example, the 1951 cold event caused a  significant die-off of fish life in the shallow Gulf Coast \mbox{%DIFAUXCMD
+\cite{gunter_fishes:1951}}\hspace{0pt}%DIFAUXCMD
+.
+}
+
+\DIFaddend The specific spatiotemporal structure of a cold event, and its correspondence with population centers, \DIFdelbegin \DIFdel{modulates }\DIFdelend \DIFaddbegin \DIFadd{determines }\DIFaddend the grid-wide demand for heating (\DIFaddbegin \DIFadd{see }\DIFaddend \cref{sec:inferred-demand}).
 The structure of the storm also drives the aggregated hazard to energy infrastructure, which has implications for the costs and benefits of infrastructure hardening.
 It is therefore important to assess the weather conditions that led to these infrastructure failures and identify whether they had historical precedent.
+\DIFdelbegin %DIFDELCMD < 
 
-\Cref{fig:historic_era5} and supplemental \cref{fig:historic_bk,fig:historic_tx} show historic cold snaps in Texas.
+%DIFDELCMD < %%%
+\DIFdel{\mbox{%DIFAUXCMD
+\Cref{fig:historic_era5} }\hspace{0pt}%DIFAUXCMD
+and supplemental \mbox{%DIFAUXCMD
+\cref{fig:historic_bk,fig:historic_tx} }\hspace{0pt}%DIFAUXCMD
+show historic }\DIFdelend \DIFaddbegin \DIFadd{The spatiotemporal patterns of historical }\DIFaddend cold snaps in Texas \DIFaddbegin \DIFadd{are illustrated in \mbox{%DIFAUXCMD
+\cref{fig:historic_era5} }\hspace{0pt}%DIFAUXCMD
+and supplemental \mbox{%DIFAUXCMD
+\cref{fig:historic_bk,fig:historic_tx}}\hspace{0pt}%DIFAUXCMD
+}\DIFaddend .
 Although the spatiotemporal structure of each event is distinct, it is apparent that cold extremes in Texas tend to co-occur with cold temperatures across much of the United States, particularly the Great Plains.
-While the 2021 event was severe, daily temperature extrema in Texas appear comparable to historical events.
+While the 2021 event was severe, daily temperature extrema in Texas appear \DIFaddbegin \DIFadd{qualitatively }\DIFaddend comparable to historical events.
 The ``Great Blizzard'' of February 1899, shown in \cref{fig:historic_bk}, caused even more intense cold.
 
 \begin{figure}
@@ -154,15 +214,18 @@ The ``Great Blizzard'' of February 1899, shown in \cref{fig:historic_bk}, caused
   \includegraphics[width=\textwidth]{historic_events_era5.pdf}
   \caption{
     Severe cold snaps that affect Texas and extend into the central United States have several precedents in the historical record.
-    Plot shows anomalies of daily mean temperatures for historic major cold events affecting Texas, defined as the departure from the seasonal (December-February) mean to facilitate comparison of events in different calendar months.
-    Temperatures over the Continental United States are plotted to show large-scale patterns, but events are selected based only on Texas temperatures.
+    Plot shows anomalies of daily mean temperatures \DIFaddbeginFL \DIFaddFL{from the ERA-5 reanalysis \mbox{%DIFAUXCMD
+\cite{hersbach_era5:2020} }\hspace{0pt}%DIFAUXCMD
+}\DIFaddendFL for historic major cold events affecting Texas, defined as the departure from the seasonal (December-February) mean \DIFdelbeginFL \DIFdelFL{to facilitate comparison }\DIFdelendFL of \DIFdelbeginFL \DIFdelFL{events in different calendar months.
+    Temperatures over }\DIFdelendFL the \DIFdelbeginFL \DIFdelFL{Continental United States are plotted to show }\DIFdelendFL \DIFaddbeginFL \DIFaddFL{observational record.
+    Anomalies facilitate identification of }\DIFaddendFL large-scale \DIFaddbeginFL \DIFaddFL{weather }\DIFaddendFL patterns \DIFdelbeginFL \DIFdelFL{, but events are selected based only }\DIFdelendFL \DIFaddbeginFL \DIFaddFL{superimposed }\DIFaddendFL on \DIFdelbeginFL \DIFdelFL{Texas temperatures}\DIFdelendFL \DIFaddbeginFL \DIFaddFL{long-term climatological averages}\DIFaddendFL .
     Hourly temperatures are averaged to 1-day (a,d,g,j,m), 3-day (b,e,h,k,n), and 5-day (c,f,i,l,o) average temperature anomalies.
   }\label{fig:historic_era5}
 \end{figure}
 
 \section{Data and Methods}
 
-We use three distinct datasets to analyze temperature minima in \DIFdelbegin \DIFdel{Texas }\DIFdelend \DIFaddbegin \DIFadd{the region covered by the Texas Interconnection bulk electric power system administered by the Electric Reliability Council of Texas (hence ``Texas Interconnection'') }\DIFaddend through the lens of distributed (each grid cell analyzed separately) and aggregated (weighted averages taken across space) extreme values analysis.
+We use three distinct datasets to analyze temperature minima in \DIFdelbegin \DIFdel{Texas }\DIFdelend \DIFaddbegin \DIFadd{the region covered by the Texas Interconnection }\DIFaddend through the lens of distributed (each grid cell analyzed separately) and aggregated (weighted averages taken across space) extreme values analysis.
 
 \subsection{Datasets}
 
@@ -203,8 +266,10 @@ We refer to this spatially aggregated time series, which has the straightforward
 
 \subsection{Return Period}
 
-For each event duration considered, return periods are obtained by fitting a stationary generalized extreme value (GEV) distribution to the time series of annual minimum December-February (DJF) temperatures, or to the time series of annual maxima of inferred \DIFaddbegin \DIFadd{per capita }\DIFaddend demand for heating (\cref{sec:inferred-demand}).
-Events that occur in December are coded to the following year.
+\DIFaddbegin \DIFadd{Return periods define the probability with which a particular event can be expected to occur.
+Thus, a $T$-year event has a $\frac{1}{T}$ probability of occurring in a given year.
+}\DIFaddend For each event duration considered, \DIFdelbegin \DIFdel{return periods are obtained }\DIFdelend \DIFaddbegin \DIFadd{we calculated return periods }\DIFaddend by fitting a stationary generalized extreme value (GEV) distribution to the time series of annual \DIFdelbegin \DIFdel{minimum December-February (DJF) temperatures, or to the time series of annual }\DIFdelend maxima of inferred \DIFaddbegin \DIFadd{per capita }\DIFaddend demand for heating (\DIFaddbegin \DIFadd{see }\DIFaddend \cref{sec:inferred-demand}).
+Events that occur in December are coded to the following year \DIFaddbegin \DIFadd{so that a single winter season is grouped together}\DIFaddend .
 The 2021 winter season was excluded from return period estimates, allowing us to interpret return periods for the February 2021 event as \emph{a priori} estimates.
 
 \subsection{Cold Duration}
@@ -256,8 +321,14 @@ Instead of aggregating this risk in space, we estimate the exceedance probabilit
 Other than a band from south-central to south-east Texas, nearly all regions of the Texas \DIFdelbegin \DIFdel{Interconnect }\DIFdelend \DIFaddbegin \DIFadd{Interconnection }\DIFaddend (gray outline in \cref{fig:local_era5}a,d) experienced cold with a return period below 50 years.
 Results are similar using station data (\cref{fig:local_ghcnd}).
 Importantly for the energy system, the band experiencing cold with return period greater than 50 years includes a substantial fraction of Texas’s population (\cref{fig:local_era5}a) and natural gas generation (\cref{fig:local_era5}d).
-Outside the Texas \DIFdelbegin \DIFdel{Interconnect }\DIFdelend \DIFaddbegin \DIFadd{Interconnection }\DIFaddend region, much of the Texas Panhandle and central Oklahoma experienced intense cold with a return period greater than 100 years at multiple durations.
-Although Oklahoma recorded some water main breaks \cite{crum_water:2021} and rolling blackouts for several hours \cite{money_oklahoma:2021}, infrastructure impacts were less severe than in Texas despite recording more extreme (relative both to its own historical record and in absolute terms) temperatures.
+Outside the Texas \DIFdelbegin \DIFdel{Interconnect region, much of the }\DIFdelend \DIFaddbegin \DIFadd{Interconnection region, the Midcontinent Independent System Operator and Southwest Power Pool instructed utilities to shed firm load, but of the approximately 4.89 million customers without power in Texas, Louisiana, and Oklahoma, an estimated 4.5 million were in }\DIFaddend Texas \DIFdelbegin \DIFdel{Panhandle and central Oklahomaexperienced intense cold with a return period greater than 100 years at multiple durations.
+Although Oklahoma recorded some water main breaks \mbox{%DIFAUXCMD
+\cite{crum_water:2021} }\hspace{0pt}%DIFAUXCMD
+and rolling blackouts for several hours \mbox{%DIFAUXCMD
+\cite{money_oklahoma:2021}}\hspace{0pt}%DIFAUXCMD
+, infrastructure impacts were less severe than in Texas despite recording more extreme (relative both to its own historical record and in absolute terms) temperatures}\DIFdelend \DIFaddbegin \DIFadd{\mbox{%DIFAUXCMD
+\cite{ceser_winterupdate:2021}}\hspace{0pt}%DIFAUXCMD
+}\DIFaddend .
 
 \begin{figure}
   \centering
@@ -280,21 +351,47 @@ Although specific locations experienced very intense ($>100$ year return period)
 
 A proximate cause of load shedding in the Texas \DIFdelbegin \DIFdel{Interconnect }\DIFdelend \DIFaddbegin \DIFadd{Interconnection }\DIFaddend during February 2021 was the vulnerability of the electricity generation system to the severe cold temperatures \cite{everhart_iea:2021}.
 \Cref{fig:local_era5,fig:local_ghcnd} show that this happened even though most parts of the state had previously experienced similarly intense cold, notably in 1989.
-While our analysis neglects other meteorological factors, like freezing rain, that may have impeded operations at specific facilities, our analysis suggests that the February 2021 failures of energy and electricity systems in the Texas \DIFdelbegin \DIFdel{Interconnect }\DIFdelend \DIFaddbegin \DIFadd{Interconnection }\DIFaddend took place during temperatures comparable to those previously recorded.
-Similarly, water mains broke in places like Houston where temperatures did not exceed 100-year return levels, underscoring characteristic vulnerability of critical infrastructure systems \cite{chester_reliable:2020}.
+\DIFaddbegin \DIFadd{Yet despite temperatures that were, in aggregate, more intense, the electricity system experienced fewer than three hours of rolling blackouts from December 21-23, 1989 \mbox{%DIFAUXCMD
+\cite{nerc_operation:1989,osborne_twofreezes:2021}}\hspace{0pt}%DIFAUXCMD
+.
+Following the 1983, 1989, and 2011 cold snaps, the North American Electric Reliability Corporation (NERC) warned that ``constraints on natural gas fuel supplies to generating plants'' and ``generating unit trips, derates, or failure to start due to weather related causes'' were common themes across severe and moderate cold extremes \mbox{%DIFAUXCMD
+\cite{nerc_previous:2013}}\hspace{0pt}%DIFAUXCMD
+, foreshadowing many of the causes of February 2021 energy system failures identified by ERCOT \mbox{%DIFAUXCMD
+\cite{ercotpublic_outagesv2:2021,magness_review:2021}}\hspace{0pt}%DIFAUXCMD
+.
+}\DIFaddend While our analysis neglects other meteorological factors, like freezing rain, that may have impeded operations at specific facilities, \DIFdelbegin \DIFdel{our analysis suggests }\DIFdelend \DIFaddbegin \DIFadd{we find }\DIFaddend that the February 2021 failures of energy and electricity systems in the Texas \DIFdelbegin \DIFdel{Interconnect }\DIFdelend \DIFaddbegin \DIFadd{Interconnection }\DIFaddend took place during temperatures \DIFdelbegin \DIFdel{comparable to those previously recorded.
+Similarly, water mains broke in places like Houston where temperatures did not exceed 100-year return levels, underscoring characteristic vulnerability of critical infrastructure systems \mbox{%DIFAUXCMD
+\cite{chester_reliable:2020}}\hspace{0pt}%DIFAUXCMD
+}\DIFdelend \DIFaddbegin \DIFadd{with precedent in the historical record}\DIFaddend .
 
 Another cause of load shedding was the high demand for electricity that low temperatures induced.
-Currently over 50\% of Texas households use electricity for space heating over the majority of census tracts of the state \cite{waite_heating:2020} and further electrification is a central element of many plans to decarbonize our energy sector \cite{williams_decarbonization:2012,davis:2018,white_txresidential:2019}.
+Currently \DIFdelbegin \DIFdel{over }\DIFdelend \DIFaddbegin \DIFadd{at }\DIFaddend 50\% of Texas households use electricity for space heating over the majority of census tracts of the state \cite{waite_heating:2020} and further electrification is a central element of many plans to decarbonize our energy sector \cite{williams_decarbonization:2012,davis:2018,white_txresidential:2019}.
 While summer peak loads have been a central planning concern on the Texas grid in the past, it is likely that winter peak loads will become a greater concern in the coming decades.
-In fact, the peak demand during this event was estimated at around \SI{74.5}{\giga\watt}, just shy of the all time peak for any season of \SI{74.8}{\giga\watt} in August 2019 \cite{everhart_iea:2021}.
-As electrification of heating increases, severe cold snaps may represent the peak demand on the Texas Interconnect.
+In fact, the \DIFdelbegin \DIFdel{peak demand }\DIFdelend \DIFaddbegin \DIFadd{estimated \mbox{%DIFAUXCMD
+\SI{76819}{\mega\watt} }\hspace{0pt}%DIFAUXCMD
+of peak demand without load shedding }\DIFaddend during this event \DIFdelbegin \DIFdel{was estimated at around \mbox{%DIFAUXCMD
+\SI{74.5}{\giga\watt}}\hspace{0pt}%DIFAUXCMD
+, just shy of the all time peak for any season of \mbox{%DIFAUXCMD
+\SI{74.8}{\giga\watt} }\hspace{0pt}%DIFAUXCMD
+in August }\DIFdelend \DIFaddbegin \DIFadd{\mbox{%DIFAUXCMD
+\cite{magness_review:2021} }\hspace{0pt}%DIFAUXCMD
+exceeded not only the previous winter demand record of \mbox{%DIFAUXCMD
+\SI{65900}{\mega\watt} }\hspace{0pt}%DIFAUXCMD
+recorded on January 17, 2018 but also the all-season record actual demand of \mbox{%DIFAUXCMD
+\SI{74800}{\mega\watt} }\hspace{0pt}%DIFAUXCMD
+recorded on August 19, }\DIFaddend 2019 \cite{everhart_iea:2021}.
+As electrification of heating \DIFdelbegin \DIFdel{increases}\DIFdelend \DIFaddbegin \DIFadd{continues}\DIFaddend , severe cold snaps may \DIFaddbegin \DIFadd{consistently }\DIFaddend represent the peak demand on the Texas Interconnect.
 
 Our primary findings hold for an alternative gridded dataset and station data (see supplemental material).
 However, calculated return periods are sensitive to the method of estimation (\cref{fig:idf_lmoments_unweighted,fig:idf_lmoments_weighted}).
 Future analysis could address parametric uncertainty, model structure uncertainty \cite{wong_floodrisk:2018}, non-stationarity \cite{Milly:2008dg}, or regime-like modes of climate variability \cite{DossGollin:2019}.
 More fundamentally, an assessment of exposure to cold extremes over the next decades should consider the deeply uncertain distribution of future climate change, and the induced effect on cold extremes in Texas.
-Although a broad scientific consensus suggests the frequency of cold extremes should decrease under warming in most places \cite{ipcc_ar5:2014}, possible links between North-South temperature gradients and mid-latitude temperature extremes remains an area of active research \cite{Barnes:2013fp,Cohen:2014gx,Screen:2013ho}.
-Regardless, the effect of climate change on peak demand for heating is likely to be small compared to the effect of rapid population growth; for example, the Texas Water Development Board anticipates at least 40\% growth from 2020 to 2050 \cite{texaswaterplan:2012}.
+Although a broad scientific consensus suggests the frequency of cold extremes should decrease under warming in most places \cite{ipcc_ar5:2014}, possible links between North-South temperature gradients and mid-latitude temperature extremes remains an area of active research \DIFdelbegin \DIFdel{\mbox{%DIFAUXCMD
+\cite{Barnes:2013fp,Cohen:2014gx,Screen:2013ho}}\hspace{0pt}%DIFAUXCMD
+}\DIFdelend \DIFaddbegin \DIFadd{\mbox{%DIFAUXCMD
+\cite{Barnes:2013fp,Cohen:2014gx,Screen:2013ho,romanowsky_stratosphere:2019}}\hspace{0pt}%DIFAUXCMD
+}\DIFaddend .
+Regardless, the effect of climate change on peak demand for heating is likely to be small compared to the effect of rapid population growth \DIFdelbegin \DIFdel{; for example, }\DIFdelend \DIFaddbegin \DIFadd{which }\DIFaddend the Texas Water Development Board\DIFdelbegin \DIFdel{anticipates at least }\DIFdelend \DIFaddbegin \DIFadd{, for example, anticipates to be }\DIFaddend 40\% \DIFdelbegin \DIFdel{growth }\DIFdelend from 2020 to 2050 \cite{texaswaterplan:2012}.
 
 Our analysis quantifies the \DIFdelbegin \DIFdel{probability with which temperature extremes }\DIFdelend \DIFaddbegin \DIFadd{frequency with which the temperatures observed during February 2021 }\DIFaddend could have been \DIFdelbegin \DIFdel{anticipated }\DIFdelend \DIFaddbegin \DIFadd{expected to occur }\DIFaddend \emph{a priori}.
 Other factors also govern infrastructure performance and failure, including precipitation, the demand for natural gas in adjacent regions, and complex connections within and between regional systems.
@@ -304,8 +401,9 @@ Thus, the exact chain of events that led to the blackouts and water system disru
 \section{Conclusions}
 
 The February 2021 cold snap was the most intense in 30 years, but was not without precedent in the full historical record.
-In addition to the record cold conditions of 1899 (\cref{fig:historic_bk}), we estimate that the weather of December 1989 would have resulted in slightly higher 6-hour and 2-day aggregate heating demands over the Texas \DIFdelbegin \DIFdel{Interconnect }\DIFdelend \DIFaddbegin \DIFadd{Interconnection }\DIFaddend had it occurred in February 2021.
-Several other storms since 1950 would have produced nearly as much demand for heating.
+In addition to the record cold conditions of 1899 (\cref{fig:historic_bk}), we estimate that the weather of December 1989 would have resulted in \DIFdelbegin \DIFdel{slightly }\DIFdelend higher 6-hour and 2-day aggregate \DIFdelbegin \DIFdel{heating demands }\DIFdelend \DIFaddbegin \DIFadd{per capita demand for heating }\DIFaddend over the Texas \DIFdelbegin \DIFdel{Interconnect }\DIFdelend \DIFaddbegin \DIFadd{Interconnection than the February 2021 event }\DIFaddend had it occurred \DIFdelbegin \DIFdel{in February 2021.
+Several other storms since 1950 would have produced nearly as much }\DIFdelend \DIFaddbegin \DIFadd{with today's population.
+Storms in February 1951, January 1962, and December 1983 would have resulted in at least 90\% as much per capita }\DIFaddend demand for heating \DIFaddbegin \DIFadd{had they occurred today}\DIFaddend .
 Given upward trends in the electrification of heating, it is likely that future cold snaps will cause peak annual loads on the Texas \DIFdelbegin \DIFdel{Interconnect }\DIFdelend \DIFaddbegin \DIFadd{Interconnection }\DIFaddend to occur during the winter season.
 Infrastructure expansion necessitated by a rapidly growing population offers Texas the opportunity to invest in a more resilient energy system.
 
@@ -313,12 +411,16 @@ Infrastructure expansion necessitated by a rapidly growing population offers Tex
 
 DJF was supported by a gift from Gates Ventures LLC to the Carnegie Institution for Science.
 The authors thank
-Sylvia Dee,
+\DIFaddbegin \DIFadd{Daniel Cohan,
+}\DIFaddend Sylvia Dee,
 Elisabeth Gawthrop,
-Adam Massmann,
-and
+\DIFaddbegin \DIFadd{Pedram Hassanzadeh,
+Fred Heutte,
+}\DIFaddend Adam Massmann,
+\DIFaddbegin \DIFadd{Alison Silverstein,
+}\DIFaddend and
 Vivek Srikrishnan
-for comments on a preliminary draft of this manuscript.
+for \DIFdelbegin \DIFdel{comments on a preliminary draft of this manuscript}\DIFdelend \DIFaddbegin \DIFadd{discussion of this work}\DIFaddend .
 The authors also thank the developers and maintainers of the open source packages we used, in particular the pydata and pangeo communities, and the many journalists and academics whose timely reporting and commentary has informed our thinking.
 
 \section*{Bibliography}
