--- a/doc/submission_02.tex
+++ b/doc/submission_02.tex
@@ -36,39 +36,38 @@
 
 \section{Introduction}
 
-Between February 14th and 17th, 2021, a  northern air mass blanketed much of thecontinental United States, causing anomalously low surface temperatures across the Great Plains.
+Between February 14th and 17th, 2021, a  northern air mass blanketed much of the continental United States, causing anomalously low surface temperatures across the Great Plains.
 The state of Texas was particularly hard hit, with coincident and cascading failures of natural gas production, power generation, transportation, and water systems leaving millions of Texans without electricity, heat, and water, many for several days \cite{ceser_winterupdate:2021,clack_uri:2021,smead_eyesoftx:2021}.
 These failures disproportionately affected vulnerable populations \cite{dobbins_blackoutdisparity:2021}, left at least 111 Texans dead \cite{mulcahy_urideath:2021}, and brought the Texas electricity grid within minutes of collapse \cite{magness_review:2021}.
 
 Since production and distribution of electricity is possible under conditions far colder than any Texas experienced in February 2021, energy system failures reflect inadequate preparedness for cold.
 These failures occurred both because electricity demand exceeded projections, and because electricity supply failed to meet them.
-On the demand side, the Electric Reliability Council of Texas (ERCOT), which operates the Texas Interconnection bulk electric power system (hence ``Texas Interconnection''), estimated that the peak demand would have been \SI{76819}{\mega\watt} without load shedding.
+On the demand side, the Electric Reliability Council of Texas (ERCOT), which operates the Texas Interconnection bulk electric power system (hence ``Texas Interconnection''), estimated that the peak demand would have been \SI{76819}{\mega\watt} without load shedding \cite{magness_review:2021}.
 This surpassed ERCOT's ``extreme winter forecast'' of \SI{67208}{\mega\watt} in its seasonal assessment of resource adequacy \cite{ercotpublic_sarawinter:2020}.
 On the supply side, ERCOT experienced over \SI{30000}{\mega\watt} of lost output over two days due to outages and derates caused by cold temperatures \cite{ercotpublic_outagesv2:2021}.
 A large fraction of this supply shortfall, which exceeded ERCOT's worst-case scenario for forced outages, came from diverse failure modes in the natural gas supply chain \cite{ercotpublic_outagesv2:2021,smead_eyesoftx:2021,ceser_winterupdate:2021}.
 
-If temperatures experienced in the region served by the Texas Interconnection were unprecedented, then it might be expected that engineering designs derived from  historical data would exhibit substantial vulnerability.
-On the other hand, if the region had experienced similar events previously then a higher level of preparation would be expected.
+If temperatures experienced in the region served by the Texas Interconnection were unprecedented, then engineering designs derived from  historical data might exhibit substantial vulnerability.
+On the other hand, if the region had experienced similar events previously then it would suggest that these vulnerabilities could have been anticipated.
 It is therefore important to assess whether historical data offered a precedent for the temperatures observed during February 2021.
 
-In this article we focus on the demand side, recognizing the complex interdependencies of electricity supply.
-We first compute the population weighted difference between observed temperatures and a standard indoor temperature of \SI{65}{\degree F} as a proxy for the unknown heating demand, and use this metric to explore the frequency with which this event could have been expected to occur using historical data.
-Next, we conduct a spatially distributed analysis to assess how unexpected the cold experienced by local roads, water mains, gas pipelines, energy generation facilities, and critical infrastructure installations was across Texas.
+To answer this question, we first compute the population weighted difference between observed temperatures and a standard indoor temperature of \SI{65}{\degree F} as a proxy for the unknown heating demand, then use standard statistical procedures to assess the probability with which the temperatures observed during February 2021 might have been expected to occur \emph{a priori}.
+We then supplement this with a spatially distributed analysis of how unexpected the cold experienced by local roads, water mains, gas pipelines, energy generation facilities, and critical infrastructure installations was across Texas.
 We conclude by discussing the implications of these findings for long-term electricity systems planning given anticipated growth of population and electrification.
 
 \subsection{Previous Cold Snaps in Texas}
 
 
 Texas state climatologist John Nielsen-Gammon wrote in 2011 that ``winter weather is a danger to TX in part because it is so rare,'' \cite{nielsen-gammon_txacc:2011}.
-Previous cold snaps in Texas, notably in 1899, 1951, 1983, 1989, and 2011, have affected not only humans but also ecological systems.
+Previous cold snaps in Texas, notably in 1899, 1951, 1983, 1989, and 2011 (see \cref{fig:historic_era5,fig:historic_bk}), have affected both human and ecological systems.
 For example, the 1951 cold event caused a  significant die-off of fish life in the shallow Gulf Coast \cite{gunter_fishes:1951}.
+
 The specific spatiotemporal structure of a cold event, and its correspondence with population centers, determines the grid-wide demand for heating (see \cref{sec:inferred-demand}).
 The structure of the storm also drives the aggregated hazard to energy infrastructure, which has implications for the costs and benefits of infrastructure hardening.
 It is therefore important to assess the weather conditions that led to these infrastructure failures and identify whether they had historical precedent.
-
-\Cref{fig:historic_era5} and supplemental \cref{fig:historic_bk,fig:historic_tx} show historic cold snaps in Texas.
+The spatiotemporal patterns of historical cold snaps in Texas are illustrated in \cref{fig:historic_era5} and supplemental \cref{fig:historic_bk,fig:historic_tx}.
 Although the spatiotemporal structure of each event is distinct, it is apparent that cold extremes in Texas tend to co-occur with cold temperatures across much of the United States, particularly the Great Plains.
-While the 2021 event was severe, daily temperature extrema in Texas appear comparable to historical events.
+While the 2021 event was severe, daily temperature extrema in Texas appear qualitatively comparable to historical events.
 The ``Great Blizzard'' of February 1899, shown in \cref{fig:historic_bk}, caused even more intense cold.
 
 \begin{figure}
@@ -76,8 +75,8 @@ The ``Great Blizzard'' of February 1899, shown in \cref{fig:historic_bk}, caused
   \includegraphics[width=\textwidth]{historic_events_era5.pdf}
   \caption{
     Severe cold snaps that affect Texas and extend into the central United States have several precedents in the historical record.
-    Plot shows anomalies of daily mean temperatures from the ERA-5 reanalysis \cite{hersbach_era5:2020} for historic major cold events affecting Texas, defined as the departure from the seasonal (December-February) mean to facilitate comparison of events in different calendar months.
-    Temperatures over the Continental United States are plotted to show large-scale patterns, but events are selected based only on Texas temperatures.
+    Plot shows anomalies of daily mean temperatures from the ERA-5 reanalysis \cite{hersbach_era5:2020} for historic major cold events affecting Texas, defined as the departure from the seasonal (December-February) mean of the observational record.
+    Anomalies facilitate identification of large-scale weather patterns superimposed on long-term climatological averages.
     Hourly temperatures are averaged to 1-day (a,d,g,j,m), 3-day (b,e,h,k,n), and 5-day (c,f,i,l,o) average temperature anomalies.
   }\label{fig:historic_era5}
 \end{figure}
@@ -120,8 +119,10 @@ We refer to this spatially aggregated time series, which has the straightforward
 
 \subsection{Return Period}
 
-For each event duration considered, return periods are obtained by fitting a stationary generalized extreme value (GEV) distribution to the time series of annual minimum December-February (DJF) temperatures, or to the time series of annual maxima of inferred per capita demand for heating (\cref{sec:inferred-demand}).
-Events that occur in December are coded to the following year.
+Return periods define the probability with which a particular event can be expected to occur.
+Thus, a $T$-year event has a $\frac{1}{T}$ probability of occurring in a given year.
+For each event duration considered, we calculated return periods by fitting a stationary generalized extreme value (GEV) distribution to the time series of annual maxima of inferred per capita demand for heating (see \cref{sec:inferred-demand}).
+Events that occur in December are coded to the following year so that a single winter season is grouped together.
 The 2021 winter season was excluded from return period estimates, allowing us to interpret return periods for the February 2021 event as \emph{a priori} estimates.
 
 \subsection{Cold Duration}
@@ -173,8 +174,7 @@ Instead of aggregating this risk in space, we estimate the exceedance probabilit
 Other than a band from south-central to south-east Texas, nearly all regions of the Texas Interconnection (gray outline in \cref{fig:local_era5}a,d) experienced cold with a return period below 50 years.
 Results are similar using station data (\cref{fig:local_ghcnd}).
 Importantly for the energy system, the band experiencing cold with return period greater than 50 years includes a substantial fraction of Texas’s population (\cref{fig:local_era5}a) and natural gas generation (\cref{fig:local_era5}d).
-Outside the Texas Interconnection region, much of the Texas Panhandle and central Oklahoma experienced intense cold with a return period greater than 100 years at multiple durations.
-Although Oklahoma recorded some water main breaks \cite{crum_water:2021} and rolling blackouts for several hours \cite{money_oklahoma:2021}, infrastructure impacts were less severe than in Texas despite recording more extreme (relative both to its own historical record and in absolute terms) temperatures.
+Outside the Texas Interconnection region, the Midcontinent Independent System Operator and Southwest Power Pool instructed utilities to shed firm load, but of the approximately 4.89 million customers without power in Texas, Louisiana, and Oklahoma, an estimated 4.5 million were in Texas \cite{ceser_winterupdate:2021}.
 
 \begin{figure}
   \centering
@@ -192,34 +192,27 @@ Although Oklahoma recorded some water main breaks \cite{crum_water:2021} and rol
 
 \section{Discussion}
 
-\begin{itemize}
-  \item \cite{nerc_previous:2013} examined the 1983 and 1989 cold snaps, among others, and found that ``two common themes observed in the reports of both the severe and lesser cold weather incidents were: Constraints on natural gas fuel supplies to generating plants; and Generating unit trips, derates, or failure to start due to weather related causes (e.g. frozen sensing lines, etc.)''
-  \item \cite{wu_tx:2021} present a model of the electricity system and suggests that there may have been a possibility for corrective operational actions to lessen the impacts of generation outages.
-  \item \cite{cartwright_lightsout:2021} calls on Texas officials to examine other business and regulatory models in light of the failures that occurred in February 2021.
-  \item \cite{nerc_operation:1989} and \cite{osborne_twofreezes:2021} catalog the effects of the December 21-23, 1989 cold snap on the Texas electricity system, notably that there were approximately two hours of rolling blackouts.
-\end{itemize}
-
-
 Our spatially aggregated metric of inferred per capita demand for heating shows that the February 2021 event was intense but not unforeseeable (\cref{fig:idf_weighted}).
 Although specific locations experienced very intense ($>100$ year return period) temperatures, we find that for most locations in Texas the temperatures recorded during the February 2021 cold snap had precedent in the historical record.
 
 A proximate cause of load shedding in the Texas Interconnection during February 2021 was the vulnerability of the electricity generation system to the severe cold temperatures \cite{everhart_iea:2021}.
 \Cref{fig:local_era5,fig:local_ghcnd} show that this happened even though most parts of the state had previously experienced similarly intense cold, notably in 1989.
-While our analysis neglects other meteorological factors, like freezing rain, that may have impeded operations at specific facilities, our analysis suggests that the February 2021 failures of energy and electricity systems in the Texas Interconnection took place during temperatures comparable to those previously recorded.
-Similarly, water mains broke in places like Houston where temperatures did not exceed 100-year return levels, underscoring characteristic vulnerability of critical infrastructure systems \cite{chester_reliable:2020}.
+Yet despite temperatures that were, in aggregate, more intense, the electricity system experienced fewer than three hours of rolling blackouts from December 21-23, 1989 \cite{nerc_operation:1989,osborne_twofreezes:2021}.
+Following the 1983, 1989, and 2011 cold snaps, the North American Electric Reliability Corporation (NERC) warned that ``constraints on natural gas fuel supplies to generating plants'' and ``generating unit trips, derates, or failure to start due to weather related causes'' were common themes across severe and moderate cold extremes \cite{nerc_previous:2013}, foreshadowing many of the causes of February 2021 energy system failures identified by ERCOT \cite{ercotpublic_outagesv2:2021,magness_review:2021}.
+While our analysis neglects other meteorological factors, like freezing rain, that may have impeded operations at specific facilities, we find that the February 2021 failures of energy and electricity systems in the Texas Interconnection took place during temperatures with precedent in the historical record.
 
 Another cause of load shedding was the high demand for electricity that low temperatures induced.
-Currently over 50\% of Texas households use electricity for space heating over the majority of census tracts of the state \cite{waite_heating:2020} and further electrification is a central element of many plans to decarbonize our energy sector \cite{williams_decarbonization:2012,davis:2018,white_txresidential:2019}.
+Currently at 50\% of Texas households use electricity for space heating over the majority of census tracts of the state \cite{waite_heating:2020} and further electrification is a central element of many plans to decarbonize our energy sector \cite{williams_decarbonization:2012,davis:2018,white_txresidential:2019}.
 While summer peak loads have been a central planning concern on the Texas grid in the past, it is likely that winter peak loads will become a greater concern in the coming decades.
-In fact, the peak demand during this event was estimated at around \SI{74.5}{\giga\watt}, just shy of the all time peak for any season of \SI{74.8}{\giga\watt} in August 2019 \cite{everhart_iea:2021}.
-As electrification of heating increases, severe cold snaps may represent the peak demand on the Texas Interconnect.
+In fact, the estimated \SI{76819}{\mega\watt} of peak demand without load shedding during this event \cite{magness_review:2021} exceeded not only the previous winter demand record of \SI{65900}{\mega\watt} recorded on January 17, 2018 but also the all-season record actual demand of \SI{74800}{\mega\watt} recorded on August 19, 2019 \cite{everhart_iea:2021}.
+As electrification of heating continues, severe cold snaps may consistently represent the peak demand on the Texas Interconnect.
 
 Our primary findings hold for an alternative gridded dataset and station data (see supplemental material).
 However, calculated return periods are sensitive to the method of estimation (\cref{fig:idf_lmoments_unweighted,fig:idf_lmoments_weighted}).
 Future analysis could address parametric uncertainty, model structure uncertainty \cite{wong_floodrisk:2018}, non-stationarity \cite{Milly:2008dg}, or regime-like modes of climate variability \cite{DossGollin:2019}.
 More fundamentally, an assessment of exposure to cold extremes over the next decades should consider the deeply uncertain distribution of future climate change, and the induced effect on cold extremes in Texas.
-Although a broad scientific consensus suggests the frequency of cold extremes should decrease under warming in most places \cite{ipcc_ar5:2014}, possible links between North-South temperature gradients and mid-latitude temperature extremes remains an area of active research \cite{Barnes:2013fp,Cohen:2014gx,Screen:2013ho}.
-Regardless, the effect of climate change on peak demand for heating is likely to be small compared to the effect of rapid population growth; for example, the Texas Water Development Board anticipates at least 40\% growth from 2020 to 2050 \cite{texaswaterplan:2012}.
+Although a broad scientific consensus suggests the frequency of cold extremes should decrease under warming in most places \cite{ipcc_ar5:2014}, possible links between North-South temperature gradients and mid-latitude temperature extremes remains an area of active research \cite{Barnes:2013fp,Cohen:2014gx,Screen:2013ho,romanowsky_stratosphere:2019}.
+Regardless, the effect of climate change on peak demand for heating is likely to be small compared to the effect of rapid population growth which the Texas Water Development Board, for example, anticipates to be 40\% from 2020 to 2050 \cite{texaswaterplan:2012}.
 
 Our analysis quantifies the frequency with which the temperatures observed during February 2021 could have been expected to occur \emph{a priori}.
 Other factors also govern infrastructure performance and failure, including precipitation, the demand for natural gas in adjacent regions, and complex connections within and between regional systems.
@@ -229,8 +222,8 @@ Thus, the exact chain of events that led to the blackouts and water system disru
 \section{Conclusions}
 
 The February 2021 cold snap was the most intense in 30 years, but was not without precedent in the full historical record.
-In addition to the record cold conditions of 1899 (\cref{fig:historic_bk}), we estimate that the weather of December 1989 would have resulted in slightly higher 6-hour and 2-day aggregate heating demands over the Texas Interconnection had it occurred in February 2021.
-Several other storms since 1950 would have produced nearly as much demand for heating.
+In addition to the record cold conditions of 1899 (\cref{fig:historic_bk}), we estimate that the weather of December 1989 would have resulted in higher 6-hour and 2-day aggregate per capita demand for heating over the Texas Interconnection than the February 2021 event had it occurred with today's population.
+Storms in February 1951, January 1962, and December 1983 would have resulted in at least 90\% as much per capita demand for heating had they occurred today.
 Given upward trends in the electrification of heating, it is likely that future cold snaps will cause peak annual loads on the Texas Interconnection to occur during the winter season.
 Infrastructure expansion necessitated by a rapidly growing population offers Texas the opportunity to invest in a more resilient energy system.
 
@@ -238,12 +231,16 @@ Infrastructure expansion necessitated by a rapidly growing population offers Tex
 
 DJF was supported by a gift from Gates Ventures LLC to the Carnegie Institution for Science.
 The authors thank
+Daniel Cohan,
 Sylvia Dee,
 Elisabeth Gawthrop,
+Pedram Hassanzadeh,
+Fred Heutte,
 Adam Massmann,
+Alison Silverstein,
 and
 Vivek Srikrishnan
-for comments on a preliminary draft of this manuscript.
+for discussion of this work.
 The authors also thank the developers and maintainers of the open source packages we used, in particular the pydata and pangeo communities, and the many journalists and academics whose timely reporting and commentary has informed our thinking.
 
 \section*{Bibliography}
