add intro paragraphs

--- a/doc/review_response.tex
+++ b/doc/review_response.tex
@@ -25,8 +25,18 @@
 
 \listoftodos
 
-We thank the editors and reviewers for their thoughtful, constructive, and timely comments on our initial submission.
-In this document we address the specific comments made by the two referees.
+We thank the editors and both referees for their thoughtful, constructive, and timely comments on our initial submission.
+
+Referee 1 encouraged us to add references to the introduction and to compare the impacts of 2021 against those of previous storms.
+We have bolstered our introduction by discussing the events of February 2021 in greater detail, making particular use of reports released by the ERCOT, the NERC, and the DOE.
+Referee 1 also encouraged us to use \SI{65}{\degree F} rather than \SI{68}{\degree F} as our reference temperature when calculating heating demand; we have done so, although this choice does not meaningfully change our core conclusions.
+
+Referee 2 encouraged us to be more specific with our wording and to avoid claims that could be easily misinterpreted.
+We now refer to our metric of population-weighted demand for heating as ``inferred demand for heating per capita,'' which we think emphasizes that the metric does not account for changing population.
+Referee 2 also echoed referee 1 in encouraging us to add references to the introduction.
+We have done so as described above.
+
+In the remainder of this document we address the specific comments made by the two referees.
 
 \section{Referee \#1}
 
@@ -138,7 +148,7 @@ In this document we address the specific comments made by the two referees.
 
 \AR{
   Thank you for the interesting and thought-provoking comment.
-  We have added some historical context regarding the 1983 and 1989 events to the discussion section as shown in response to the previous comment.
+  We have added some historical context regarding the 1983 and 1989 events (we find the 1989 event to be more extreme than the 1983 one) to the discussion section as shown in response to the previous comment.
   However, we have refrained from speculating about the degree to which different technologies might have performed in 2021 since nearly all technologies used in Texas can work in cold temperatures if sufficiently prepared.
 }
 
@@ -296,7 +306,7 @@ In this document we address the specific comments made by the two referees.
 
 \AR{
   Thank you for this suggestion.
-  The first step we have taken is, as noted above, to refer to ``inferred demand for heating per capita'' to emphasize that we are not accounting for historic population change.
+  The first step we have taken is to refer to our metric as ``inferred demand for heating per capita'' to emphasize that we are not accounting for historic population change.
   Beyond population, changes in such factors as the fraction of heating that is electrified, the distribution of building sizes, and the degree of insulation in buildings will affect total electricity demand.
   Turning to the future, large uncertainties in factors like population and technology (for example, electric vehicles and battery storage) will affect electricity demand during cold snaps.
   However, modeling these changes and their implications is beyond the scope of this analysis.
